Your descriptive commit message here

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ TWILIO_ACCOUNT_SID=AC3be071c3431875fbd49a120fc66844d6
 TWILIO_AUTH_TOKEN=507f49a7b6b7676aef81d147ed534c4f
 GMAIL_USER=muteeurrahmans8@gmail.com
 GMAIL_PASSWORD=qdzu wmes uogp igrh
+JWT_SECRET=your_secret_key_here
